OpenLDAP 2.3 Change Log

OpenLDAP 2.3.28 Engineering
	Fixed libldap ldap.conf max line length (ITS#4669)
	Fixed librewrite LDAP map parsing bug
	Added ldapsearch bad filter pattern check (ITS#4647)
	Fixed slapd-monitor locking with scope "subordinate" (ITS#4668)
	Fixed slapd global access controls initialization (ITS#4654)
	Fixed slapd setting c_sasl_bindop only on SASL binds
	Fixed slapd-perl deletes (ITS#2612)
	Fixed slapd-perl backend initialization (ITS#4358)
	Fixed slapd-perl finding interpreter inside a thread (ITS#4358)

OpenLDAP 2.3.27 Release
	Fixed libldap dangling pointer issue (previous fix was broken) (ITS#4405)

OpenLDAP 2.3.26 Release
	Fixed libldap dnssrv bug with "not present" positive statement (ITS#4610)
	Fixed libldap dangling pointer issue (ITS#4405)
	Fixed slapd incorrect rebuilding of replica URI (ITS#4633)
	Fixed slapd DN X.509 normalization crash (ITS#4644)
	Fixed slapd-monitor operations order via callbacks (ITS#4631)
	Fixed slapd-sql undefined filter handling (ITS#4604)
	Fixed slapo-accesslog purge task during shutdown
	Fixed slapo-ppolicy handling of default policy (ITS#4634)
	Fixed slapo-ppolicy logging verbosity when using default policy
	Fixed slapo-syncprov incomplete sync on restart issues (ITS#4622)

OpenLDAP 2.3.25 Release
	Fixed liblber ber_bvreplace_x argument checks
	Add libldap_r TLS concurrency workaround (ITS#4583)
	Fixed liblutil password length bug
	Add slapd glue/subordinate conflict check (ITS#4614)
	Fixed slapd acl selfwrite bug (ITS#4587)
	Fixed slapd bconfig "require" and "none" handling (ITS#4574)
	Fixed slapd bconfig segfault when ldapadding new schema entries
	Fixed slapd syncrepl no rootdn bug (ITS#4582)
	Fixed slapd syncrepl contextCSN issue (ITS#4622)
	Fixed slapd-bdb/hdb lock bug with virtual root (ITS#4572)
	Fixed slapd-bdb/hdb modrdn new entry disappearing bug (ITS#4616)
	Fixed slapd-bdb/hdb cache job issue
	Fixed slapo-syncprov need new CSN with delete syncID sets (ITS#4534)