@@ -3,6 +3,7 @@ OpenLDAP 2.3 Change Log
 OpenLDAP 2.3.28 Engineering
 	Fixed libldap ldap.conf max line length (ITS#4669)
 	Fixed librewrite LDAP map parsing bug
+	Fixed librewrite map double free bug
 	Added ldapsearch bad filter pattern check (ITS#4647)
 	Fixed slapd-monitor locking with scope "subordinate" (ITS#4668)
 	Fixed slapd global access controls initialization (ITS#4654)
